# sbs

./: .flake8  LICENSE  README.md  pyproject.toml
source/: template.pptx
src/sbs/: main.py  powerpoint.py  tabulator.py
tests/: test_powerpoint.py  test_sbs.py  test_tabulator.py
